# llama-demo

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
